Fix spacing at bottom of home page

--- a/wild-blue-yonder-website/src/components/UpcomingShows/upcoming-shows.css
+++ b/wild-blue-yonder-website/src/components/UpcomingShows/upcoming-shows.css
@@ -10,4 +10,5 @@
   justify-content: center;
   /* gap: 12px; */
   padding: 16px;
+  margin-bottom: 40px;
 }
